# distrib

./: CMakeLists.txt
examples/: CMakeLists.txt  logarithmDist.cpp  normalDist.cpp  poissonDist.cpp  solidAngleDist.cpp  uniformBinCenterDist.cpp  uniformDist.cpp
include/: MDistrib.h  distrib_header.h
src/: MDistrib.cpp
